--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 				<div class="main_name">
-					<img src="./img/CONCIERGE.png" alt="">
+					<h1>CONCIERGE</h1>
 					<p class="title_name">
 						We are here to help you 24
 					</p>
@@ -66,7 +66,7 @@
 							</span>	
 						</div>
 
-						<img src="./img/name_yaht.png" alt="">
+							<h2>Fjord 38 xspress</h2>
 
 						<div class="description">
 							
@@ -130,7 +130,7 @@
 			</div>
 
 			<div class="main_logo">
-				<img src="./img/CONCIERGE.png" alt="">
+				<h1>CONCIERGE</h1>
 			</div>
 
 			<p class="title_name">
