--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<ul>
 						<li ><a class="btn_langue" href="indexRu.html">RU</a></li>
 						<li ><a class="btn_langue1" href="index.html">EN</a></li>
-						<li ><a class="btn_langue" href="indexFr.html">FR</a></li>
+						<li ><a class="btn_langue" href="./indexFr.html">FR</a></li>
 					</ul>
 					
 				</div>
@@ -180,8 +180,7 @@
 					</div>
 
 					<div class="name_group">
-						<img class="main_name_group" src="./img/Tempest 850.png" alt="">
-						<img class="line_after" src="./img/Line 2.png" alt="">
+						<h2>Tempest 850</h2>
 					</div>
 					<div class="price">
 						<p>Cruise package <b>950€</b></p>
@@ -192,17 +191,17 @@
 						<div class="left_block">
 
 							<div class="wrap_description">
-								<img src="./img/icon1.png" alt="">
+								<img src="./img/Icon1.png" alt="">
 								<p>- - cabin</p>
 							</div>
 
 							<div class="wrap_description">
-								<img src="./img/icon2.png" alt="">
+								<img src="./img/Icon2.png" alt="">
 								<p>40 knots — max. speed</p>
 							</div>
 
 							<div class="wrap_description">
-								<img src="./img/icon3.png" alt="">
+								<img src="./img/Icon3.png" alt="">
 								<p>10 guests</p>
 							</div>
 
@@ -211,7 +210,7 @@
 						<div class="right_block">
 
 							<div class="wrap_description">
-								<img src="./img/icon 4.png" alt="">
+								<img src="./img/Icon 4.png" alt="">
 								<p>8,50 м — length</p>
 							</div>
 
@@ -241,8 +240,7 @@
 									</div>
 
 									<div class="name_group">
-										<img class="main_name_group" src="./img/Lagoon 55 Bateau sans Permis.png" alt="">
-										<img class="line_after2" src="./img/Line 2.png" alt="">
+										<h2>Lagoon 55 Bateau sans Permis</h2>
 									</div>
 									<div class="price">
 										<p>Cruise package <b>240€</b></p>
@@ -253,17 +251,17 @@
 										<div class="left_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon1.png" alt="">
+												<img src="./img/Icon1.png" alt="">
 												<p>- cabin</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon2.png" alt="">
+												<img src="./img/Icon2.png" alt="">
 												<p>7 knots — max. speed</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon3.png" alt="">
+												<img src="./img/Icon3.png" alt="">
 												<p>7 guests</p>
 											</div>
 
@@ -306,8 +304,7 @@
 					</div>
 
 					<div class="name_group">
-						<img class="main_name_group" src="./img/Tempest 700.png" alt="">
-						<img class="line_after" src="./img/Line 2.png" alt="">
+						<h2>Tempest 700</h2>
 					</div>
 					<div class="price">
 						<p>Cruise package <b>600€</b></p>
@@ -318,17 +315,17 @@
 						<div class="left_block">
 
 							<div class="wrap_description">
-								<img src="./img/icon1.png" alt="">
+								<img src="./img/Icon1.png" alt="">
 								<p>- cabin</p>
 							</div>
 
 							<div class="wrap_description">
-								<img src="./img/icon2.png" alt="">
+								<img src="./img/Icon2.png" alt="">
 								<p>35 knots — max. speed</p>
 							</div>
 
 							<div class="wrap_description">
-								<img src="./img/icon3.png" alt="">
+								<img src="./img/Icon3.png" alt="">
 								<p>8 guests</p>
 							</div>
 
@@ -337,7 +334,7 @@
 						<div class="right_block">
 
 							<div class="wrap_description">
-								<img src="./img/icon 4.png" alt="">
+								<img src="./img/Icon 4.png" alt="">
 								<p>7 м — length</p>
 							</div>
 
@@ -367,8 +364,7 @@
 									</div>
 
 									<div class="name_group">
-										<img class="main_name_group" src="./img/SeaFox 266 CC.png" alt="">
-										<img class="line_after3" src="./img/Line 2.png" alt="">
+										<h2>SeaFox 266 CC</h2>
 									</div>
 									<div class="price">
 										<p>Cruise package -<b></b></p>
@@ -379,17 +375,17 @@
 										<div class="left_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon1.png" alt="">
+												<img src="./img/Icon1.png" alt="">
 												<p>- cabin</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon2.png" alt="">
+												<img src="./img/Icon2.png" alt="">
 												<p>20 knots — max. speed</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon3.png" alt="">
+												<img src="./img/Icon3.png" alt="">
 												<p>10 guests</p>
 											</div>
 
@@ -398,7 +394,7 @@
 										<div class="right_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon 4.png" alt="">
+												<img src="./img/Icon 4.png" alt="">
 												<p>8,50 м — length</p>
 											</div>
 
@@ -433,8 +429,7 @@
 								</div>
 
 								<div class="name_group">
-									<img class="main_name_group" src="./img/Sea Ray Sunsport 250.png" alt="">
-									<img class="line_after4" src="./img/Line 2.png" alt="">
+									<h2>Sea Ray Sunsport 250</h2>
 								</div>
 								<div class="price">
 									<p>Cruise package <b></b></p>
@@ -445,17 +440,17 @@
 									<div class="left_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon1.png" alt="">
+											<img src="./img/Icon1.png" alt="">
 											<p>1 cabin</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon2.png" alt="">
+											<img src="./img/Icon2.png" alt="">
 											<p>25 knots — max. speed</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon3.png" alt="">
+											<img src="./img/Icon3.png" alt="">
 											<p>8 guests</p>
 										</div>
 
@@ -464,7 +459,7 @@
 									<div class="right_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon 4.png" alt="">
+											<img src="./img/Icon 4.png" alt="">
 											<p>8 м — length</p>
 										</div>
 
@@ -494,8 +489,7 @@
 									</div>
 
 									<div class="name_group">
-										<img class="main_name_group" src="./img/invictus 280 GT.png" alt="">
-										<img class="line_after3" src="./img/Line 2.png" alt="">
+										<h2>invictus 280 GT</h2>
 									</div>
 									<div class="price">
 										<p>Charter package <b>1600€</b></p>
@@ -506,17 +500,17 @@
 										<div class="left_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon1.png" alt="">
+												<img src="./img/Icon1.png" alt="">
 												<p>1 cabin</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon2.png" alt="">
+												<img src="./img/Icon2.png" alt="">
 												<p>20 knots — max. speed</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon3.png" alt="">
+												<img src="./img/Icon3.png" alt="">
 												<p>8 guests</p>
 											</div>
 
@@ -525,7 +519,7 @@
 										<div class="right_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon 4.png" alt="">
+												<img src="./img/Icon 4.png" alt="">
 												<p>9 м — length</p>
 											</div>
 
@@ -559,8 +553,7 @@
 								</div>
 
 								<div class="name_group">
-									<img class="main_name_group" src="./img/Cranchi Yacht Giada.png" alt="">
-									<img class="line_after4" src="./img/Line 2.png" alt="">
+									<h2>Cranchi Yacht Giada</h2>
 								</div>
 								<div class="price">
 									<div class="duble_price">
@@ -574,17 +567,17 @@
 									<div class="left_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon1.png" alt="">
+											<img src="./img/Icon1.png" alt="">
 											<p>1 cabin</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon2.png" alt="">
+											<img src="./img/Icon2.png" alt="">
 											<p>30 knots — max. speed</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon3.png" alt="">
+											<img src="./img/Icon3.png" alt="">
 											<p>7 guests</p>
 										</div>
 
@@ -593,7 +586,7 @@
 									<div class="right_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon 4.png" alt="">
+											<img src="./img/Icon 4.png" alt="">
 											<p>9 м — length</p>
 										</div>
 
@@ -623,8 +616,7 @@
 									</div>
 
 									<div class="name_group">
-										<img class="main_name_group" src="./img/Princess V55.png" alt="">
-										<img class="line_after3" src="./img/Line 2.png" alt="">
+										<h2>Princess V55</h2>
 									</div>
 									<div class="price">
 										<p>Cruise package - <b></b></p>
@@ -635,17 +627,17 @@
 										<div class="left_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon1.png" alt="">
+												<img src="./img/Icon1.png" alt="">
 												<p>3 cabin</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon2.png" alt="">
+												<img src="./img/Icon2.png" alt="">
 												<p>25 knots — max. speed</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon3.png" alt="">
+												<img src="./img/Icon3.png" alt="">
 												<p>9 guests</p>
 											</div>
 
@@ -654,7 +646,7 @@
 										<div class="right_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon 4.png" alt="">
+												<img src="./img/Icon 4.png" alt="">
 												<p>- м — length</p>
 											</div>
 
@@ -687,8 +679,7 @@
 								</div>
 
 								<div class="name_group">
-									<img class="main_name_group" src="./img/Cranchi Yacht Zaffiro.png" alt="">
-									<img class="line_after4" src="./img/Line 2.png" alt="">
+									<h2>Cranchi Yacht Zaffiro</h2>
 								</div>
 								<div class="price">
 									<div class="duble_price">
@@ -702,17 +693,17 @@
 									<div class="left_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon1.png" alt="">
+											<img src="./img/Icon1.png" alt="">
 											<p>1 cabin</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon2.png" alt="">
+											<img src="./img/Icon2.png" alt="">
 											<p>25 knots — max. speed</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon3.png" alt="">
+											<img src="./img/Icon3.png" alt="">
 											<p>7 guests</p>
 										</div>
 
@@ -721,7 +712,7 @@
 									<div class="right_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon 4.png" alt="">
+											<img src="./img/Icon 4.png" alt="">
 											<p>10,3 м — length</p>
 										</div>
 
@@ -751,8 +742,7 @@
 									</div>
 
 									<div class="name_group">
-										<img class="main_name_group" src="./img/Vandutch 40.png" alt="">
-										<img class="line_after3" src="./img/Line 2.png" alt="">
+										<h2>Vandutch 40</h2>
 									</div>
 									<div class="price">
 										<p>Cruise package <b>2400€</b> &emsp; &emsp;All inclusive <b>2200€</p>
@@ -763,17 +753,17 @@
 										<div class="left_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon1.png" alt="">
+												<img src="./img/Icon1.png" alt="">
 												<p>1 cabin</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon2.png" alt="">
+												<img src="./img/Icon2.png" alt="">
 												<p>20/40 knots — max. speed</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon3.png" alt="">
+												<img src="./img/Icon3.png" alt="">
 												<p>11 guests</p>
 											</div>
 
@@ -782,7 +772,7 @@
 										<div class="right_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon 4.png" alt="">
+												<img src="./img/Icon 4.png" alt="">
 												<p>12 м — length</p>
 											</div>
 
@@ -816,8 +806,7 @@
 								</div>
 
 								<div class="name_group">
-									<img class="main_name_group" src="./img/Sport Fishing Whales & Dolphin Watching.png" alt="">
-									<img class="line_after4" src="./img/Line 2.png" alt="">
+								<h2>Sport Fishing Whales</h2>
 								</div>
 								<div class="price">
 									<div class="duble_price">
@@ -831,17 +820,17 @@
 									<div class="left_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon1.png" alt="">
+											<img src="./img/Icon1.png" alt="">
 											<p>3 cabin</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon2.png" alt="">
+											<img src="./img/Icon2.png" alt="">
 											<p>29 knots — max. speed</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon3.png" alt="">
+											<img src="./img/Icon3.png" alt="">
 											<p>6 guests</p>
 										</div>
 
@@ -850,7 +839,7 @@
 									<div class="right_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon 4.png" alt="">
+											<img src="./img/Icon 4.png" alt="">
 											<p>12 м — length</p>
 										</div>
 
@@ -880,8 +869,7 @@
 									</div>
 
 									<div class="name_group">
-										<img class="main_name_group" src="./img/Sacs Orgasmo 34.png" alt="">
-										<img class="line_after3" src="./img/Line 2.png" alt="">
+									<h2>Sacs Orgasmo 34</h2>
 									</div>
 									<div class="price">
 										<p>Cruise package - <b></b></p>
@@ -892,17 +880,17 @@
 										<div class="left_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon1.png" alt="">
+												<img src="./img/Icon1.png" alt="">
 												<p>1 cabin</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon2.png" alt="">
+												<img src="./img/Icon2.png" alt="">
 												<p>35 knots — max. speed</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon3.png" alt="">
+												<img src="./img/Icon3.png" alt="">
 												<p>9 guests</p>
 											</div>
 
@@ -911,7 +899,7 @@
 										<div class="right_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon 4.png" alt="">
+												<img src="./img/Icon 4.png" alt="">
 												<p>12 м — lebgth</p>
 											</div>
 
