--- a/indexRu.html
+++ b/indexRu.html
@@ -1817,11 +1817,7 @@
 								
 			</div>
 
-			<div class="block_back">
-							<div class="link_back">
-								<a href="#">Вернуться в начало</a>
-							</div>
-					</div>
+			
 
 		</div>
 
@@ -2783,8 +2779,7 @@
 									</div>
 
 									<div class="name_group">
-										<img class="main_name_group" src="./img/Leopard 34.png" alt="">
-										<img class="line_after6" src="./img/Line 2.png" alt="">
+										<h2>Leopard 34</h2>
 									</div>
 									<div class="price">
 										<p>Круиз-пакет <b>18800€</b></p>
@@ -2795,17 +2790,17 @@
 										<div class="left_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon1.png" alt="">
+												<img src="./img/Icon1.png" alt="">
 												<p>5 кают</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon2.png" alt="">
+												<img src="./img/Icon2.png" alt="">
 												<p>38 узлов — макс. скорость</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon3.png" alt="">
+												<img src="./img/Icon3.png" alt="">
 												<p>12 гостей</p>
 											</div>
 
@@ -2814,7 +2809,7 @@
 										<div class="right_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon 4.png" alt="">
+												<img src="./img/Icon 4.png" alt="">
 												<p>34 м — длина</p>
 											</div>
 
@@ -2847,8 +2842,7 @@
 								</div>
 
 								<div class="name_group">
-									<img class="main_name_group" src="./img/Sunseeker 115.png" alt="">
-									<img class="line_after6" src="./img/Line 2.png" alt="">
+									<h2>Sunseeker 115</h2>
 								</div>
 								<div class="price">
 									<div class="duble_price">
@@ -2862,17 +2856,17 @@
 									<div class="left_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon1.png" alt="">
+											<img src="./img/Icon1.png" alt="">
 											<p>5 кают</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon2.png" alt="">
+											<img src="./img/Icon2.png" alt="">
 											<p>17 узлов — макс. скорость</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon3.png" alt="">
+											<img src="./img/Icon3.png" alt="">
 											<p>12 гостей</p>
 										</div>
 
@@ -2881,7 +2875,7 @@
 									<div class="right_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon 4.png" alt="">
+											<img src="./img/Icon 4.png" alt="">
 											<p>35,20 м — длина</p>
 										</div>
 
@@ -2911,8 +2905,7 @@
 									</div>
 
 									<div class="name_group">
-										<img class="main_name_group" src="./img/San Lorenzo 118.png" alt="">
-										<img class="line_after3" src="./img/Line 2.png" alt="">
+									<h2>San Lorenzo 118</h2>
 									</div>
 									<div class="price">
 										<p>Круиз-пакет <b>24500€</b></p>
@@ -2923,17 +2916,17 @@
 										<div class="left_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon1.png" alt="">
+												<img src="./img/Icon1.png" alt="">
 												<p>5 кают</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon2.png" alt="">
+												<img src="./img/Icon2.png" alt="">
 												<p>27 узлов — макс. скорость</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon3.png" alt="">
+												<img src="./img/Icon3.png" alt="">
 												<p>12 гостей</p>
 											</div>
 
@@ -2942,7 +2935,7 @@
 										<div class="right_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon 4.png" alt="">
+												<img src="./img/Icon 4.png" alt="">
 												<p>36,5 м — длина</p>
 											</div>
 
@@ -2976,8 +2969,7 @@
 								</div>
 
 								<div class="name_group">
-									<img class="main_name_group" src="./img/Sunseeker 40 meters 2018.png" alt="">
-									<img class="line_after2" src="./img/Line 2.png" alt="">
+								<h2>Sunseeker 40 meters 2018</h2>
 								</div>
 								<div class="price">
 									<div class="duble_price">
@@ -2991,17 +2983,17 @@
 									<div class="left_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon1.png" alt="">
+											<img src="./img/Icon1.png" alt="">
 											<p>- кают</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon2.png" alt="">
+											<img src="./img/Icon2.png" alt="">
 											<p>14 узлов — макс. скорость</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon3.png" alt="">
+											<img src="./img/Icon3.png" alt="">
 											<p>12 гостей</p>
 										</div>
 
@@ -3010,7 +3002,7 @@
 									<div class="right_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon 4.png" alt="">
+											<img src="./img/Icon 4.png" alt="">
 											<p>40,05 м — длина</p>
 										</div>
 
@@ -3040,8 +3032,7 @@
 									</div>
 
 									<div class="name_group">
-										<img class="main_name_group" src="./img/Sunseeker 40.05 metres 2019.png" alt="">
-										<img class="line_after2" src="./img/Line 2.png" alt="">
+										<h2>Sunseeker 40.05 metres 2019</h2>
 									</div>
 									<div class="price">
 										<p>Круиз-пакет -<b></b></p>
@@ -3052,17 +3043,17 @@
 										<div class="left_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon1.png" alt="">
+												<img src="./img/Icon1.png" alt="">
 												<p>5 кают</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon2.png" alt="">
+												<img src="./img/Icon2.png" alt="">
 												<p>12 узлов — макс. скорость</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon3.png" alt="">
+												<img src="./img/Icon3.png" alt="">
 												<p>10 гостей</p>
 											</div>
 
@@ -3071,7 +3062,7 @@
 										<div class="right_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon 4.png" alt="">
+												<img src="./img/Icon 4.png" alt="">
 												<p>40,05 м — длина</p>
 											</div>
 
@@ -3104,8 +3095,7 @@
 								</div>
 
 								<div class="name_group">
-									<img class="main_name_group" src="./img/ISA Yacht 44 M.png" alt="">
-									<img class="line_after3" src="./img/Line 2.png" alt="">
+									h2ISA Yacht 44 M
 								</div>
 								<div class="price">
 									<div class="duble_price">
@@ -3119,17 +3109,17 @@
 									<div class="left_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon1.png" alt="">
+											<img src="./img/Icon1.png" alt="">
 											<p>5 кают</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon2.png" alt="">
+											<img src="./img/Icon2.png" alt="">
 											<p>20 узлов — макс. скорость</p>
 										</div>
 
 										<div class="wrap_description">
-											<img src="./img/icon3.png" alt="">
+											<img src="./img/Icon3.png" alt="">
 											<p>12 гостей</p>
 										</div>
 
@@ -3138,7 +3128,7 @@
 									<div class="right_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon 4.png" alt="">
+											<img src="./img/Icon 4.png" alt="">
 											<p>43 м — длина</p>
 										</div>
 
@@ -3168,8 +3158,7 @@
 									</div>
 
 									<div class="name_group">
-										<img class="main_name_group" src="./img/ZEPTER.png" alt="">
-										<img class="line_after5" src="./img/Line 2.png" alt="">
+										<h2>ZEPTER</h2>
 									</div>
 									<div class="price">
 										<p>Круиз-пакет -<b></b></p>
@@ -3180,17 +3169,17 @@
 										<div class="left_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon1.png" alt="">
+												<img src="./img/Icon1.png" alt="">
 												<p>6 кают</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon2.png" alt="">
+												<img src="./img/Icon2.png" alt="">
 												<p>11 узлов — макс. скорость</p>
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon3.png" alt="">
+												<img src="./img/Icon3.png" alt="">
 												<p>12 гостей</p>
 											</div>
 
@@ -3199,7 +3188,7 @@
 										<div class="right_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon 4.png" alt="">
+												<img src="./img/Icon 4.png" alt="">
 												<p>49,91 м — длина</p>
 											</div>
 
