fix name yacht finish

--- a/indexRu.html
+++ b/indexRu.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Яхты Монако</title>
+	<meta property="og:description" content="Аренда лодок и яхт на Французской Ривьере. Вы можете арендовать наши яхты с капитаном / экипажем или без него. Мы позаботимся о том, чтобы вы получили наилучшие впечатления от возможностей нашей компании.">
 	<link rel="stylesheet" href="./style/style.css">
 	<link rel="stylesheet" type="text/css" href="@media.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&display=swap" rel="stylesheet">
@@ -117,8 +118,8 @@
 			<div class="bg_check"> 
 				<div class="check_langue">
 					<ul>
-						<li ><a class="btn_langue1" href="index.html">RU</a></li>
-						<li ><a class="btn_langue" href="indexENG.html">EN</a></li>
+						<li ><a class="btn_langue1" href="indexRu.html">RU</a></li>
+						<li ><a class="btn_langue" href="index.html">EN</a></li>
 						<li ><a class="btn_langue" href="indexFr.html">FR</a></li>
 					</ul>
 					
@@ -433,7 +434,7 @@
 									<h2>Sea Ray Sunsport 250</h2>
 								</div>
 								<div class="price">
-									<p>Круиз-пакет <b></b></p>
+									<p>Круиз-пакет <b>950€</b></p>
 								</div>
 
 								<div class="info_about_yacht">
@@ -620,7 +621,7 @@
 										<h2>Princess V55</h2>
 									</div>
 									<div class="price">
-										<p>Круиз-пакет - <b></b></p>
+										<p>Круиз-пакет <b>2900€</b></p>
 									</div>
 
 									<div class="info_about_yacht">
@@ -873,7 +874,7 @@
 										<h2>Sacs Orgasmo 34</h2>
 									</div>
 									<div class="price">
-										<p>Круиз-пакет - <b></b></p>
+										<p>Круиз-пакет <b>1600€</b></p>
 									</div>
 
 									<div class="info_about_yacht">
@@ -1007,7 +1008,7 @@
 										<h2>Prestige 42 S</h2>
 									</div>
 									<div class="price">
-										<p>Круиз-пакет - <b></b></p>
+										<p>Круиз-пакет <b>2400€</b></p>
 									</div>
 
 									<div class="info_about_yacht">
@@ -2151,7 +2152,7 @@
 										<h2>Princess V70</h2>
 									</div>
 									<div class="price">
-										<p>Чартерный-пакет - <b></b></p>
+										<p>Чартерный-пакет <b>4500€</b></p>
 									</div>
 
 									<div class="info_about_yacht">
@@ -2594,7 +2595,7 @@
 								</div>
 								<div class="price">
 									<div class="duble_price">
-										<p> Чартарный-пакет -<b></b></p>
+										<p> Чартарный-пакет <b>14500€</b></p>
 										<p></p>
 									</div>
 								</div>
@@ -2846,7 +2847,7 @@
 								</div>
 								<div class="price">
 									<div class="duble_price">
-										<p> Чартарный-пакет -<b></b></p>
+										<p> Чартарный-пакет <b>26500€</b></p>
 										<p></p>
 									</div>
 								</div>
@@ -2973,7 +2974,7 @@
 								</div>
 								<div class="price">
 									<div class="duble_price">
-										<p> Круиз-пакет -<b></b></p>
+										<p> Круиз-пакет <b>175000€</b></p>
 										<p></p>
 									</div>
 								</div>
@@ -3035,7 +3036,7 @@
 										<h2>Sunseeker 40.05 metres 2019</h2>
 									</div>
 									<div class="price">
-										<p>Круиз-пакет -<b></b></p>
+										<p>Круиз-пакет <b>185000€</b></p>
 									</div>
 
 									<div class="info_about_yacht">
@@ -3161,7 +3162,7 @@
 										<h2>ZEPTER</h2>
 									</div>
 									<div class="price">
-										<p>Круиз-пакет -<b></b></p>
+										<p>Круиз-пакет <b>175000€</b></p>
 									</div>
 
 									<div class="info_about_yacht">
