--- a/indexRu.html
+++ b/indexRu.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Яхты Монако</title>
-	<meta property="og:description" content="Аренда лодок и яхт на Французской Ривьере. Вы можете арендовать наши яхты с капитаном / экипажем или без него. Мы позаботимся о том, чтобы вы получили наилучшие впечатления от возможностей нашей компании.">
+	<meta property="og:description" content="Аренда лодок и яхт на Лазурном берегу Франции. Вы можете арендовать наши яхты с капитаном / экипажем или без него. Мы позаботимся о том, чтобы вы получили наилучшие впечатления от возможностей нашей компании.">
 	<link rel="stylesheet" href="./style/style.css">
 	<link rel="stylesheet" type="text/css" href="@media.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&display=swap" rel="stylesheet">
