--- a/indexFr.html
+++ b/indexFr.html
@@ -1851,7 +1851,7 @@
 									<div class="left_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon1.png" alt="">
+											<img src="./img/Icon1.png" alt="">
 											<p>3 cabine</p>
 										</div>
 
