--- a/indexFr.html
+++ b/indexFr.html
@@ -519,7 +519,7 @@
 										<div class="right_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon 4.png" alt="">
+												<img src="./img/Icon 4.png" alt="">
 												<p>9 м — longueur</p>
 											</div>
 
@@ -2229,7 +2229,7 @@
 									<div class="left_block">
 
 										<div class="wrap_description">
-											<img src="./img/icon1.png" alt="">
+											<img src="./img/Icon1.png" alt="">
 											<p>3 cabine</p>
 										</div>
 
