--- a/indexRu.html
+++ b/indexRu.html
@@ -1279,7 +1279,7 @@
 											</div>
 
 											<div class="wrap_description">
-												<img src="./img/icon3.png" alt="">
+												<img src="./img/Icon3.png" alt="">
 												<p>10 гостей</p>
 											</div>
 
