--- a/indexRu.html
+++ b/indexRu.html
@@ -72,17 +72,17 @@
 						<div class="description">
 							
 							<div class="block_description">
-								<img src="./img/icon1.png" alt="">
+								<img src="./img/Icon1.png" alt="">
 								<p>11.32 метра — длина яхты </p>
 							</div>
 
 							<div class="block_description">
-								<img src="./img/icon2.png" alt="">
+								<img src="./img/Icon2.png" alt="">
 								<p> 38 узлов — макс. скорость</p>
 							</div>
 
 							<div class="block_description">
-								<img src="./img/icon3.png" alt="">
+								<img src="./img/Icon3.png" alt="">
 								<p>12 гостей</p>
 							</div>
 
