--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 										<div class="right_block">
 
 											<div class="wrap_description">
-												<img src="./img/icon 4.png" alt="">
+												<img src="./img/Icon 4.png" alt="">
 												<p>5,50 м — length</p>
 											</div>
 
