--- a/indexRu.html
+++ b/indexRu.html
@@ -3278,7 +3278,7 @@
 			
 			<div class="second_block_with_contact">
 				<div class="maps">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d42011.80064541748!2d2.251923677829927!3d48.84414477928611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6700e263b79b9%3A0x717e4fdee782505f!2zOTEgUnVlIGRlIExvdXJtZWwsIDc1MDE1IFBhcmlzLCDQpNGA0LDQvdGG0LjRjw!5e0!3m2!1sru!2sru!4v1596884203655!5m2!1sru!2sru" width="90%" height="457" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46078.13352133356!2d7.464413009208148!3d43.79603360799896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12cdebbec4ca024f%3A0x40819a5fd979ac0!2zMDY1MDAg0JzQtdC90YLQvtC90LAsINCk0YDQsNC90YbQuNGP!5e0!3m2!1sru!2sru!4v1597416280870!5m2!1sru!2sru" width="90%" height="503" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				</div>
 
 				<div class="logo_footer">
@@ -3318,7 +3318,7 @@
 			<div class="hide_container">
 
 					<div class="maps">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d42011.80064541748!2d2.251923677829927!3d48.84414477928611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6700e263b79b9%3A0x717e4fdee782505f!2zOTEgUnVlIGRlIExvdXJtZWwsIDc1MDE1IFBhcmlzLCDQpNGA0LDQvdGG0LjRjw!5e0!3m2!1sru!2sru!4v1596884203655!5m2!1sru!2sru" width="1500px" height="1500px"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46078.13352133356!2d7.464413009208148!3d43.79603360799896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12cdebbec4ca024f%3A0x40819a5fd979ac0!2zMDY1MDAg0JzQtdC90YLQvtC90LAsINCk0YDQsNC90YbQuNGP!5e0!3m2!1sru!2sru!4v1597416280870!5m2!1sru!2sru" width="1500" height="1500" frameborder="0" style="border-radius:250px;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 					</div>
 
 						<div class="logo_footer">
@@ -3329,9 +3329,12 @@
 					<div class="footer_contact">
 						<div class="footer_title1">
 							<img src="./img/phone (1) 1.png" alt="">
-							<p> +33 6 45 96 86 08 Ru/Fr<br>
-							+33 6 98 92 12 35 EN</p>
+							<p> +33 6 45 96 86 08 Ru/Fr</p>
 						</div>
+						<div class="footer_title1">
+							<p>+33 6 98 92 12 35 EN</p>
+						</div>
+						
 						<div class="footer_title">
 						<img src="./img/Subtract.png" alt="">
 						<p> Menton<br>FRANCE</p>
