--- a/indexRu.html
+++ b/indexRu.html
@@ -33,7 +33,7 @@
 			<div class="right_block_header">
 				<div class="numbers">
 					<img src="img/tel_logo.png" alt="">
-					<a href="#">33 6 45 96 86 08</a>
+					<a href="tel:33645968608">33 6 45 96 86 08</a>
 				</div>
 
 				<div class="check_langue">
@@ -3329,10 +3329,11 @@
 					<div class="footer_contact">
 						<div class="footer_title1">
 							<img src="./img/phone (1) 1.png" alt="">
-							<p> 33 6 45 96 86 08 Ru/Fr</p>
+							<a href="tel:33645968608">33 6 45 96 86 08 Ru/Fr</a>
+							
 						</div>
 						<div class="footer_title1">
-							<p>33 6 98 92 12 35 EN</p>
+							<a href="tel:33645968608">33 6 98 92 12 35 EN</a>
 						</div>
 						
 						<div class="footer_title">
