--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Yachts in Monaco</title>
+	<link rel="icon" href="./img/ICON3.png" type="image/x-icon">
+	<meta property="og:image" content="./img/ICON3.png">
 	<meta property="og:description" content="Renting of boats and yachts on the French Riviera.You can either rent our yachts with a captain/crew or without.We will make sure, you get the best possible experience with the facilities of our company.">
 	<link rel="stylesheet" href="./style/style.css">
 	<link rel="stylesheet" type="text/css" href="@media.css">
