--- a/indexFr.html
+++ b/indexFr.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Yachts à Monaco</title>
-	<link rel="icon" href="./img/ICON3.png" type="image/x-icon">
+	<link rel="icon" href="./img/ICON3 2.png" type="image/x-icon">
 	<meta property="og:image" content="./img/ICON3.png">
 	<meta property="og:description" content="Location de bateaux et yachts sur la Côte d'Azur.Vous pouvez louer nos yachts avec ou sans capitaine / équipage.Nous nous assurerons que vous obtenez la meilleure expérience possible avec les installations de notre société.">
 	<link rel="stylesheet" href="./style/style.css">
