--- a/indexRu.html
+++ b/indexRu.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Яхты Монако</title>
-	<link rel="icon" href="./img/ICON3.png" type="image/x-icon">
+	<link rel="icon" href="./img/ICON3 2.png" type="image/x-icon">
 	<meta property="og:image" content="./img/ICON3.png">
 	<meta property="og:description" content="Аренда лодок и яхт на Лазурном берегу Франции. Вы можете арендовать наши яхты с капитаном / экипажем или без него. Мы позаботимся о том, чтобы вы получили наилучшие впечатления от возможностей нашей компании.">
 	<link rel="stylesheet" href="./style/style.css">
