--- a/index.html
+++ b/index.html
@@ -3039,7 +3039,7 @@
 									</div>
 
 									<div class="name_group">
-									<h2>Sunseeker 40.05 metres 2019Sunseeker 40.05 metres 2019</h2>
+									<h2>Sunseeker 40.05 metres 2019</h2>
 									</div>
 									<div class="price">
 										<p>Cruise package <b>185000€</b></p>
