--- a/index.html
+++ b/index.html
@@ -3242,6 +3242,8 @@
 				</h2>
 			</div>
 
+		<form id="form_back">
+
 			<div class="form_back">
 				
 				<div class="form-email">
@@ -3255,8 +3257,10 @@
 				</div>
 				
 			</div>
+		</form>
 
 				<div class="hide_container">
+		<form id="form_back1">
 			<div class="form-email">
 				<div class="form_name">
 					<input class="user_name input" name="name" type="text" placeholder="    Your name"/>
@@ -3271,6 +3275,7 @@
 						<button class="send_button">Send</button>
 					</div>
 			</div>
+		</form>
 		</div>
 			
 		</div>
@@ -3416,7 +3421,7 @@
 
 
 				<div class="signatury">
-					<a href="https://www.instagram.com/kelaseff/" target="blank"><p>Site create by Dima Kelsev</p></a>
+					<a href="https://www.instagram.com/kelaseff/" target="blank"><p>Site create by Dmitriy Kelasev</p></a>
 				</div>
 
 
