--- a/indexFr.html
+++ b/indexFr.html
@@ -3241,7 +3241,7 @@
 					 et nous vous rappellerons
 				</h2>
 			</div>
-
+		<form id="form_back">
 			<div class="form_back">
 				
 				<div class="form-email">
@@ -3255,8 +3255,10 @@
 				</div>
 				
 			</div>
+		</form>
 
 				<div class="hide_container">
+		<form id="form_back1">
 			<div class="form-email">
 				<div class="form_name">
 					<input class="user_name input" name="name" type="text" placeholder="    Votre prénom"/>
@@ -3271,6 +3273,7 @@
 						<button class="send_button">Envoyer le message</button>
 					</div>
 			</div>
+		</form>
 		</div>
 			
 		</div>
@@ -3417,7 +3420,7 @@
 
 
 				<div class="signatury">
-					<a href="https://www.instagram.com/kelaseff/" target="blank"><p>Site créé par Dima Kelsev</p></a>
+					<a href="https://www.instagram.com/kelaseff/" target="blank"><p>Site créé par Dmitriy Kelasev</p></a>
 				</div>
 
 
