--- a/indexRu.html
+++ b/indexRu.html
@@ -3236,7 +3236,7 @@
 					 мы вам перезвоним
 				</h2>
 			</div>
-
+		<form id="form_back">
 			<div class="form_back">
 				
 				<div class="form-email">
@@ -3250,7 +3250,10 @@
 				</div>
 				
 			</div>
+		</form>
+
 	<div class="hide_container">
+		<form id="form_back1">
 			<div class="form-email">
 				<div class="form_name">
 					<input class="user_name input" name="name" type="text" placeholder="    Ваше имя"/>
@@ -3265,6 +3268,7 @@
 						<button class="send_button">Отправить</button>
 					</div>
 			</div>
+		</form>
 		</div>
 			
 	</div>
@@ -3408,7 +3412,7 @@
 
 
 				<div class="signatury">
-					<a href="https://www.instagram.com/kelaseff/" target="blank"><p>Site create by Dima Kelsev</p></a>
+					<a href="https://www.instagram.com/kelaseff/" target="blank"><p>Site create by Dmitriy Kelasev</p></a>
 				</div>
 
 
