add video for  bg

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <header class="header">
         <div class="heaeder_logo">
             <img id="logo" src="img/МАГНОЛИЯ LOGO 1.png" alt="">
+            
 
             <div class="mb_header">
                 <div class="burger_menu">
@@ -36,6 +37,7 @@
                             <a href="indexFr.html">FR</a>
                         </div>
                     </div>
+                    
             </div>
         </div>
 
@@ -67,7 +69,8 @@
                 </a>
         </div>
 
-
+        <video class="video_media" src="video/video_bg.mp4" width="100%" autoplay="" muted="" loop=""></video>
+        <video class="mb_video_media" src="video/-941103775105906689.mov" width="100%" autoplay="" muted="" loop=""></video>
     </header>
 
     <section class="slide_section">
