--- a/indexENG.html
+++ b/indexENG.html
@@ -67,7 +67,7 @@
                 </a>
         </div>
 
-
+        <video class="video_media" src="video/video_bg.mp4" width="100%" autoplay="" muted="" loop=""></video>
     </header>
 
     <section class="slide_section">
