--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 </a>
         </div>
 
-        <video class="video_media" src="video/video_bg.mp4" width="100%" autoplay="" muted="" loop=""></video>
-        <video class="mb_video_media" src="video/-941103775105906689.mov" width="100%" autoplay="" muted="" loop=""></video>
+        <video class="video_media" src="video/video_bg.mp4" width="100%" autoplay="" muted="" controls="controls" loop=""></video>
+        
     </header>
 
     <section class="slide_section">
